--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
+    "chalk": "^2.4.1",
     "clean-webpack-plugin": "^0.1.19",
     "css-loader": "^1.0.0",
     "file-loader": "^1.1.11",
@@ -27,6 +28,10 @@
     "html-webpack-plugin": "^3.2.0",
     "lodash": "^4.17.10",
     "mini-css-extract-plugin": "^0.4.1",
+    "ora": "^3.0.0",
+    "rimraf": "^2.6.2",
+    "semver": "^5.5.1",
+    "shelljs": "^0.8.2",
     "style-loader": "^0.21.0",
     "vue-loader": "^15.2.6",
     "vue-style-loader": "^4.1.1",
@@ -35,5 +40,14 @@
     "webpack-cli": "^3.1.0",
     "webpack-dev-server": "^3.1.5",
     "webpack-merge": "^4.1.4"
-  }
+  },
+  "engines": {
+    "node": ">= 8.0.0",
+    "npm": ">= 4.0.0"
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not ie <= 8"
+  ]
 }
